--- a/Tyuiu.NikolaevaAN.Sprint4.Task4.V2/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.csproj
+++ b/Tyuiu.NikolaevaAN.Sprint4.Task4.V2/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AE1B3896-63C6-4F50-89F7-39BE19977DBF}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.NikolaevaAN.Sprint4.Task1.V27.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.NikolaevaAN.Sprint4.Task1.V27.Lib</AssemblyName>
+    <ProjectGuid>{34E67BFE-09A0-483F-95CA-F703FC6DBE16}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Tyuiu.NikolaevaAN.Sprint4.Task4.V2</RootNamespace>
+    <AssemblyName>Tyuiu.NikolaevaAN.Sprint4.Task4.V2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,14 +41,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib\Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib.csproj">
+      <Project>{76404906-e365-4314-8751-673dcd5fa0b1}</Project>
+      <Name>Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
