--- a/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib.csproj
+++ b/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib/Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AE1B3896-63C6-4F50-89F7-39BE19977DBF}</ProjectGuid>
+    <ProjectGuid>{76404906-E365-4314-8751-673DCD5FA0B1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.NikolaevaAN.Sprint4.Task1.V27.Lib</RootNamespace>
-    <AssemblyName>Tyuiu.NikolaevaAN.Sprint4.Task1.V27.Lib</AssemblyName>
+    <RootNamespace>Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib</RootNamespace>
+    <AssemblyName>Tyuiu.NikolaevaAN.Sprint4.Task4.V2.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,8 +39,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="tyuiu.cources.programming.interfaces">
       <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
